Частичные изменения логики после обновновления схемы БД.